CCE-615: fix alignment so it looks ok on android, iPhone, web, etc…

--- a/src/less/components/_forms-checkboxes.less
+++ b/src/less/components/_forms-checkboxes.less
@@ -43,7 +43,7 @@
                 display: inline-block;
                 font-family: 'Glyphicons Halflings';
                 color: #fff;
-                line-height: 13px;
+                line-height: 15px;
                 border: @checkbox-border-width solid @default-blue;
             }
         }
